sera : adiciona nixpacks.toml

--- a/chatbot-borzi-railway/nixpacks.toml
+++ b/chatbot-borzi-railway/nixpacks.toml
@@ -1,9 +1,8 @@
 [phases.setup]
 nixPkgs = [
   "nodejs_18",              # ✅ OK
-  "npm_9",                  # ✅ OK
   "chromium",               # ✅ OK
-  "libnss",                 # ✅ OK
+  "nss",                 # ✅ OK
   "atk",                    # ✅ OK
   "cups",                   # ✅ Corrigido de 'libcups'
   "mesa",                   # ✅ OK
@@ -11,8 +10,6 @@ nixPkgs = [
   "pango",                  # ✅ OK
   "gtk3",                   # ✅ OK
   "libxshmfence",           # ✅ OK
-  "libgbm",                 # ✅ OK
-  "xorg.libXScrnSaver"      # ✅ Corrigido de 'libXScrnSaver'
-]
+  ]
 [start]
 cmd = "node chatbot-borzi.js"
