--- a/chatbot-borzi-railway/nixpacks.toml
+++ b/chatbot-borzi-railway/nixpacks.toml
@@ -1,13 +1,20 @@
-[nixpacks]
-phases.build.nixPkgs = [
-  "alsa-lib"
-  "atk"
+[phases.setup]
+nixPkgs = [
+  "nodejs_18",
+  "npm-9_x",
+  "libnss3",
+  "libatk1.0-0",
+  "libatk-bridge2.0-0",
+  "libcups2",
+  "libgbm1",
+  "libasound2",
+  "libpangocairo-1.0-0",
+  "libxss1",
+  "libgtk-3-0",
+  "libxshmfence1",
+  "libglu1",
   "chromium"
-  "cups"
-  "gtk3"
-  "xorg.libxshmfence"
-  "mesa"
-  "nodejs_18"
-  "nss"
-  "pango"
 ]
+
+[start]
+cmd = "node chatbot-borzi.js"
