--- a/chatbot-borzi-railway/nixpacks.toml
+++ b/chatbot-borzi-railway/nixpacks.toml
@@ -1,18 +1,18 @@
 [phases.setup]
 nixPkgs = [
   "nodejs_18",
-  "npm-9_x",
+  "npm",
   "libnss3",
-  "libatk1.0-0",
-  "libatk-bridge2.0-0",
-  "libcups2",
-  "libgbm1",
-  "libasound2",
-  "libpangocairo-1.0-0",
-  "libxss1",
-  "libgtk-3-0",
-  "libxshmfence1",
-  "libglu1",
+  "atk",
+  "atkbridge",
+  "cups",
+  "mesa",
+  "alsaLib",
+  "pango",
+  "libxss",
+  "gtk3",
+  "libxshmfence",
+  "glu",
   "chromium"
 ]
 
