--- a/chatbot-borzi-railway/nixpacks.toml
+++ b/chatbot-borzi-railway/nixpacks.toml
@@ -7,7 +7,7 @@ nixPkgs = [
   "atkbridge",
   "cups",
   "mesa",
-  "alsaLib",
+  "alsa-lib",
   "pango",
   "libxss",
   "gtk3",
@@ -15,5 +15,6 @@ nixPkgs = [
   "glu",
   "chromium"
 ]
+
 [start]
 cmd = "node chatbot-borzi.js"
