corrige sintaxe do nixpacks.toml (vírgulas)

--- a/chatbot-borzi-railway/nixpacks.toml
+++ b/chatbot-borzi-railway/nixpacks.toml
@@ -1,17 +1,17 @@
 [phases.setup]
 nixPkgs = [
-  "nodejs_18"
-  "npm"
-  "libnss3"
-  "atk"
-  "cups"
-  "mesa"
-  "alsa-lib"
-  "pango"
-  "libxss"
-  "gtk3"
-  "libxshmfence"
-  "glu"
+  "nodejs_18",
+  "npm",
+  "libnss3",
+  "atk",
+  "cups",
+  "mesa",
+  "alsa-lib",
+  "pango",
+  "libxss",
+  "gtk3",
+  "libxshmfence",
+  "glu",
   "chromium"
 ]
 
